Closed
Bug 303503
Opened 20 years ago
Closed 20 years ago
make CompositeDataSourceImpl::GetAllResources NS_NOTYETIMPLEMENTED message meaningful
Categories
(Core Graveyard :: RDF, defect)
Core Graveyard
RDF
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: bc, Assigned: bc)
Details
Attachments
(1 file)
|
895 bytes,
patch
|
axel
:
review+
shaver
:
superreview+
|
Details | Diff | Splinter Review |
When tracking assertions, simple asserts with "Write me!" don't really help in
easily determining the location of the problem. While asserts do show the
file/line number, these can change over time making automatic historical
comparisons difficult.
| Assignee | ||
Comment 1•20 years ago
|
||
Comment 2•20 years ago
|
||
Comment on attachment 191661 [details] [diff] [review]
patch
sounds like a good idea.
Attachment #191661 -
Flags: review+
| Assignee | ||
Updated•20 years ago
|
Attachment #191661 -
Flags: superreview?(shaver)
Comment 3•20 years ago
|
||
Comment on attachment 191661 [details] [diff] [review]
patch
sr=shaver
Attachment #191661 -
Flags: superreview?(shaver) → superreview+
| Assignee | ||
Comment 4•20 years ago
|
||
Axel, I don't think I have permission to check this in. Can you do it for me?
Assignee: nobody → axel
| Assignee | ||
Comment 5•20 years ago
|
||
I found my cvs horkage. Will check this in to trunk later today.
Assignee: axel → bob
| Assignee | ||
Comment 6•20 years ago
|
||
Checking in rdf/base/src/nsCompositeDataSource.cpp;
/cvsroot/mozilla/rdf/base/src/nsCompositeDataSource.cpp,v <--
nsCompositeDataSource.cpp
new revision: 1.71; previous revision: 1.70
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Updated•7 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•