Bug 303503 - make CompositeDataSourceImpl::GetAllResources NS_NOTYETIMPLEMENTED message meaningful, r=axel,sr=shaver